makebook/asymptotics/exercises/20-n5-n3-1-5n3-cos-n-7-8/traceback.txt
Traceback (most recent call last):
  File "/usr/lib64/python3.7/site-packages/latextool_basic.py", line 4383, in add
    d['pin_y'] = eval(expr) # depends on expr
  File "<string>", line 1
    20n**5 /(n**3 + 1) + 5*n**3 *cos(n) + 7**8
      ^
SyntaxError: invalid syntax
